<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="5.0dip" android:weightSum="1.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="left" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="7.0dip">
        <CheckBox android:id="@id/switchSendType" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false" android:text="@string/switch_send_type" />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:text="@string/select_send_type_title" android:layout_weight="0.07" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="left" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" />
    <LinearLayout android:layout_gravity="left" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
        <TextView android:id="@id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/maxtime" />
        <EditText android:id="@id/editopentime" android:layout_width="60.0dip" android:layout_height="wrap_content" android:inputType="number" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="left" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/testtime" />
        <EditText android:id="@id/spacetime" android:layout_width="60.0dip" android:layout_height="wrap_content" android:inputType="number" />
    </LinearLayout>
    <Button android:id="@id/btnSave" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/save" />
    <TextView android:id="@id/tvShowOpenFile" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <TextView android:id="@id/tvShowSendType" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <TextView android:id="@id/tvShowSendResult" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <Button android:id="@id/btnclear" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:text="@string/clear" />
    <TextView android:layout_gravity="bottom" android:id="@id/tvShowVersion" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:text="@string/version" />
</LinearLayout>